Correção de Projeto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio Formulário</title>
+    <title>Validando Formulário</title>
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
                 <input class="mensagem-texto" type="text" name="mensagem" id="mensagem" placeholder="Mensagem *">
                 <span class="erro"></span>
             </div>
-            
+
             <p>*campos obrigatórios</p>
 
             <button class="botao">Enviar</button>
