Alteração no HTML do Projeto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsividade.css">
-    <title>Quest - JS Intermediário</title>
+    <title>Validando Formúlario</title>
 </head>
 
 <body>
